@@ -19,7 +19,7 @@
 # Don't set your version to anything such as "test" that
 # could match a directory name.
 # ==========================================================
-IPAC_MODULE_VERSION=R2.11-1.5.1
+IPAC_MODULE_VERSION=R2.14-0.2.0
 
 # ==========================================================
 # Define module paths using pattern
